--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -1,3 +1,2 @@
+<img id="lander" class="lander" src="/images/landing_image_export.png" alt="Lock up your ETH and earn rewards for your patience today!">
 
-
-<img src="./images/landing_image_export.png" alt="">
