--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,5 @@
 <header class="sidebar">
-    <!-- <h1>True Freeze</h1> -->
-    <a href="/"><img src="/images/truefreezelogo.svg" alt=""></a>
+    <a href="/"><img class="titlelogo" src="/images/truefreezelogo.svg" alt="TrueFreeze"></a>
     <nav>
         <ul>
             <li>Lock Freezer</li>
