--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>True Freeze</title>
     <link rel="stylesheet" href="/styles.css">
+    <link rel="icon" 
+      type="image/png" 
+      href="/images/favicon-32x32.png" />
 </head>
 <body>
     <%- include('./partials/header') %>
+    <%- include('./partials/walletConnection') %>
+
     <div id="main-content" class="main-content">
         <div id="landing" class="content-section" style="display: block;">
-            <%- include('./pages/landing') %>
-        `       
+            <%- include('./pages/landing') %>       
         </div>
         <div id="lockFreezer" class="content-section" style="display: none;">
             <%- include('./pages/lockFreezer') %>
@@ -39,17 +43,17 @@
             function autoScroll() {
                 const landingSection = document.getElementById('landing');
                 if (landingSection.style.display !== 'none') {
-                    scrollPercent += 20;
-                    if (scrollPercent >= 100) {
-                        scrollPercent = 0;
-                    }
+                    scrollPercent += 40;
+                    // if (scrollPercent >= 100) {
+                    //     scrollPercent = 0;
+                    // }
                     const scrollPosition = (document.documentElement.scrollHeight - document.documentElement.clientHeight) * (scrollPercent / 100);
                     window.scrollTo({ top: scrollPosition, behavior: 'smooth' });
                     console.log("Landing Scroll...")
                 }
             }
 
-            setInterval(autoScroll, 10000); // Scroll every 10 seconds
+            setInterval(autoScroll, 6000); // Scroll every 10 seconds
         });
     </script>
     <script src="/script.js"></script>
