--- a/views/pages/lockFreezer.ejs
+++ b/views/pages/lockFreezer.ejs
@@ -1,2 +1,13 @@
 <h2>Lock Freezer</h2>
 <p>This is the Lock Freezer page content.</p>
+<svg width="200" height="400" viewBox="0 0 200 400" xmlns="http://www.w3.org/2000/svg">
+    <!-- Fridge body -->
+    <rect x="50" y="50" width="100" height="300" fill="#D3D3D3" stroke="#000" stroke-width="2"/>
+    
+    <!-- Fridge door -->
+    <rect id="fridge-door" x="50" y="50" width="50" height="300" fill="#A9A9A9" stroke="#000" stroke-width="2"/>
+
+    <!-- Square -->
+    <rect id="square" x="10" y="200" width="40" height="40" fill="#1963a866"/>
+  </svg>
+  
