--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,4 +10,16 @@
             <li>Documentation</li>
         </ul>
     </nav>
+<br>
+<div class="balance-box">
+    <div>WETH: 5</div> <img src="/images/ethicon.svg" alt="">
+    <br> <br>
+</div>
+<div class="balance-box">
+    <div>frETH: 0.3454</div> <img src="/images/frethicon.svg" alt=""> 
+    <br> <br>
+</div>
+<div class="balance-box">
+    <div>FRZ: 1304239</div> <img src="/images/frzicon.svg" alt=""> 
+</div>
 </header>
