--- a/views/pages/lockFreezer.ejs
+++ b/views/pages/lockFreezer.ejs
@@ -1,3 +1,4 @@
+<div class="mc-box">
 <h2>Lock Freezer</h2>
 <p>This is the Lock Freezer page content.</p>
 <svg width="200" height="400" viewBox="0 0 200 400" xmlns="http://www.w3.org/2000/svg">
@@ -10,4 +11,4 @@
     <!-- Square -->
     <rect id="square" x="10" y="200" width="40" height="40" fill="#1963a866"/>
   </svg>
-  
+</div>
