--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,12 +2,12 @@
     <a href="/"><img class="titlelogo" src="/images/truefreezelogo.svg" alt="TrueFreeze"></a>
     <nav>
         <ul>
-            <li>Lock Freezer</li>
-            <li>View Freezers</li>
-            <li>Stake & Burn</li>
-            <li>CRV FACTORY LP</li>
-            <li>Wrap/Unwrap ETH</li>
-            <li>Documentation</li>
+            <li id="nav-lockFreezer">Lock Freezer</li>
+            <li id="nav-viewFreezers">View Freezers</li>
+            <li id="nav-stakeBurn">Stake & Burn</li>
+            <li id="nav-crvFactory">CRV FACTORY LP</li>
+            <li id="nav-wrapUnwrapETH">Wrap/Unwrap ETH</li>
+            <li id="nav-documentation">Documentation</li>
         </ul>
     </nav>
 <br>
