--- a/views/partials/walletConnection.ejs
+++ b/views/partials/walletConnection.ejs
@@ -1,4 +1,7 @@
 <div class="walletConnectBar">
-    
+    <div id="wallet-address" style="margin-right: 10px;">
+        Address: 0x...0000  
+    </div>  
+
     <button class="walletBttns">Connect Wallet</button>
 </div>
