--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,8 +23,9 @@
         <div id="viewFreezers" class="content-section" style="display: none;">
             <%- include('./pages/viewFreezers') %>
         </div>
-        <div id="stakeFRZ" class="content-section" style="display: none;">
+        <div id="stakeBurn" class="content-section" style="display: none;">
             <%- include('./pages/stakeFRZ') %>
+            <%- include('./pages/burnfrETH') %>
         </div>
         <div id="crvFactory" class="content-section" style="display: none;">
             <%- include('./pages/crvFactory') %>
