--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,12 +2,42 @@
     <a href="/"><img class="titlelogo" src="/images/truefreezelogo.svg" alt="TrueFreeze"></a>
     <nav>
         <ul>
-            <li id="nav-lockFreezer">Lock Freezer</li>
-            <li id="nav-viewFreezers">View Freezers</li>
-            <li id="nav-stakeBurn">Stake & Burn</li>
-            <li id="nav-crvFactory">CRV FACTORY LP</li>
-            <li id="nav-wrapUnwrapETH">Wrap/Unwrap ETH</li>
-            <li id="nav-documentation">Documentation</li>
+            <li id="nav-lockFreezer">
+            <div class="navbttnwrapper">
+                Lock Freezer  
+                <img id="lockIcon" class="navbttnicon" src="/images/lockicon.svg" alt=""> </li>
+            </div>
+            <li id="nav-viewFreezers">
+                <div class="navbttnwrapper">
+                    View Freezers
+                    <img id="fridgeIcon" class="navbttnicon" src="/images/frETHreveallottie.svg" alt=""> </li>
+                    </div>
+            </li>
+            <li id="nav-stakeBurn">
+                <div class="navbttnwrapper">
+                    Stake & Burn
+                    <img id="burnIcon" class="navbttnicon" src="/images/burnicon.svg" alt=""> </li>
+                </div>    
+                </li>
+            <li id="nav-wrapUnwrapETH">
+                <div class="navbttnwrapper">
+                    Wrap/Unwrap ETH
+                    <img id="wrapETHIcon" class="navbttnicon" src="/images/wethIcon.svg" alt=""> </li>
+                </div>
+                </li>
+            <li id="nav-crvFactory">
+                <div class="navbttnwrapper">
+                    CRV FACTORY LP
+                    <img id="crvLPIcon" class="navbttnicon" src="/images/crvLP.svg" alt=""> </li>
+                </div>
+                </li>
+    
+            <li id="nav-documentation">
+                <div class="navbttnwrapper">
+                    Documentation
+                    <img id="docIcon" class="navbttnicon" src="/images/documentation.svg" alt=""> </li>
+                </div>
+                </li>
         </ul>
     </nav>
 <br>
