--- a/views/partials/walletConnection.ejs
+++ b/views/partials/walletConnection.ejs
@@ -3,5 +3,5 @@
         Address: 0x...0000  
     </div>  
 
-    <button class="walletBttns">Connect Wallet</button>
+    <button class="walletBttns" style="font-size: 1em;"> <img style="padding-right: 10px;" src="/images/wallet-connect.svg" alt=""> Connect Wallet</button>
 </div>
