Added Contract Address Tooltips, and claim section

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,7 @@
         <div id="stakeBurn" class="content-section" style="display: none;">
             <%- include('./pages/stakeFRZ') %>
             <%- include('./pages/burnfrETH') %>
+            <%- include('./pages/claim') %>
         </div>
         <div id="crvFactory" class="content-section" style="display: none;">
             <%- include('./pages/crvFactory') %>
