--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
                 </li>
             <li id="nav-crvFactory">
                 <div class="navbttnwrapper">
-                    CRV FACTORY LP
+                    frETH/WETH <br> CRV LP
                     <img id="crvLPIcon" class="navbttnicon" src="/images/crvLP.svg" alt=""> </li>
                 </div>
                 </li>
@@ -46,10 +46,16 @@
     <br> <br>
 </div>
 <div class="balance-box">
-    <div>frETH: 0.3454</div> <img src="/images/frethicon.svg" alt=""> 
-    <br> <br>
+    <div id="frETHbbLabel" class="tooltip">frETH: 0.3454
+        <span class="tooltiptext">frETH Contract Address: 0xb4bd4628e6efb0cb521d9ec35050c75840320374</span>
+    </div> 
+    <img src="/images/frethicon.svg" alt=""> 
+    <br><br>
 </div>
 <div class="balance-box">
-    <div>FRZ: 1304239</div> <img src="/images/frzicon.svg" alt=""> 
+    <div id="FRZbbLabel" class="tooltip">FRZ: 1304239
+        <span class="tooltiptext">FRZ Contract Address: 0x55b1e2D8b13E7acad03353FAD58fc3FA065C5822</span>
+    </div> 
+    <img src="/images/frzicon.svg" alt=""> 
 </div>
 </header>
