--- a/public/styles.css
+++ b/public/styles.css
@@ -141,6 +141,46 @@ body {
     margin-top: 3%;
 }   
 
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: fit-content;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%; /* Position the tooltip above the text */
+    left: 80%;
+    margin-left: -110px; /* Use margin to center the tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+.tooltip .tooltiptext::after {
+    content: '';
+    position: absolute;
+    top: 100%; /* At the bottom of the tooltip */
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
 .navbttnicon {
     justify-self: center;
     align-self: center; 
