--- a/views/pages/crvFactory.ejs
+++ b/views/pages/crvFactory.ejs
@@ -1,2 +1,4 @@
+<div id="iframe-container">
+    <iframe id="lazy-iframe" data-src="<%= iframeSrc %>" width="100%" height="800px" frameborder="0"></iframe>
+</div>
 
-<iframe src="https://curve.fi/#/ethereum/pools/factory-crypto-65" width="100%" height="800px" frameborder="0"></iframe>
