--- a/views/pages/stakeFRZ.ejs
+++ b/views/pages/stakeFRZ.ejs
@@ -1,2 +1,19 @@
-<h2>Stake FRZ</h2>
-<p>Stake your FRZ</p>
+<div class="pageTitle">
+    <h2><span style="font-weight: 300;">STAKE</span></h2>
+    <h3 class="yr">YOUR</h3>
+    <h2>FRZ</h2>
+    
+</div>
+
+<div class="sbc-stat-sectional" >
+    <span>Staked FRZ: 0</span>
+    <span>Lifetime frETH Earnings: 0</span>
+    <span>Lifetime WETH Earnings: 0</span>
+    
+</div>
+
+
+
+
+
+
