--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
       href="/images/favicon-32x32.png" />
 </head>
 <body>
+    <div class="overlay" id="overlay"></div>
+
     <%- include('./partials/header') %>
     <%- include('./partials/walletConnection') %>
 
