--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -42,20 +42,26 @@
     </nav>
 <br>
 <div class="balance-box">
-    <div>WETH: 5</div> <img src="/images/ethicon.svg" alt="">
+    <div>WETH: 
+    </div> 
+    <div id =WETHbbBalance> 5 </div>
+    <img src="/images/ethicon.svg" alt="">
     <br> <br>
 </div>
 <div class="balance-box">
-    <div id="frETHbbLabel" class="tooltip">frETH: 0.3454
+    <div id="frETHbbLabel" class="tooltip">frETH: 
+        
         <span class="tooltiptext">frETH Contract Address: 0xb4bd4628e6efb0cb521d9ec35050c75840320374</span>
     </div> 
+    <div id =frETHbbBalance> 0.3454</div>
     <img src="/images/frethicon.svg" alt=""> 
     <br><br>
 </div>
 <div class="balance-box">
-    <div id="FRZbbLabel" class="tooltip">FRZ: 1304239
-        <span class="tooltiptext">FRZ Contract Address: 0x55b1e2D8b13E7acad03353FAD58fc3FA065C5822</span>
+    <div id="FRZbbLabel" class="tooltip">FRZ:
+    <span class="tooltiptext">FRZ Contract Address: 0x55b1e2D8b13E7acad03353FAD58fc3FA065C5822</span>
     </div> 
+    <div id =FRZbbBalance>1304239 </div>
     <img src="/images/frzicon.svg" alt=""> 
 </div>
 </header>
