--- a/public/styles.css
+++ b/public/styles.css
@@ -254,6 +254,7 @@ body {
     text-decoration: none;
     display: block;
     padding-top: 10px;
+    margin-top: 20px;
 }
 .dropdown-content a:hover {
     background-color: #f1f1f14a;
@@ -306,5 +307,26 @@ body {
   #fridge-door {
     animation: closeDoor 2s forwards 3s;
     animation-delay: 2s;
+  }
+ 
+
+@keyframes breathing {
+    0% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    50% {
+      transform: scale(1.1);
+      opacity: 0.7;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+  
+  .breathing-text {
+    display: inline-block;
+    animation: breathing 7s ease-in-out infinite;
   }
   
