--- a/views/pages/burnfrETH.ejs
+++ b/views/pages/burnfrETH.ejs
@@ -24,11 +24,22 @@
     <h2>FRZ</h2>
 </div>
 
-<div class="sbc-stat-sectional" >
-    <span>BURNT FRZ: 0</span>
+<div>
+Burn
 
-    
+    <button> Submit</button>
 </div>
+
+
+<div class="sbc-stat-sectional" >
+    <span>Lifetime frETH Earnings: 0</span>
+    <span>Lifetime WETH Earnings: 0</span>
+    <span>Claimed frETH: 0</span>
+    <span>Claimed WETH: 0</span>
+    <span>BURNT FRZ: 0</span>
+</div>
+    
+
 
 
 
