--- a/views/pages/claim.ejs
+++ b/views/pages/claim.ejs
@@ -24,12 +24,18 @@
     <h2>FRZ</h2>
 </div>
 
+<div>
+Claim
+
+    <button> Submit</button>
+</div>
+
 <div class="sbc-stat-sectional" >
+    <span>Lifetime frETH Earnings: 0</span>
+    <span>Lifetime WETH Earnings: 0</span>
     <span>Claimed frETH: 0</span>
     <span>Claimed WETH: 0</span>
-
-
-    
+    <span>BURNT FRZ: 0</span>
 </div>
 
 
