--- a/views/pages/stakeFRZ.ejs
+++ b/views/pages/stakeFRZ.ejs
@@ -23,12 +23,23 @@
     <h3 class="yr">YOUR</h3>
     <h2>FRZ</h2>
 </div>
+<div class="sbc-box-sectional">
+    <div class="sbc-input-sectional">
+        <input class="sbc-input" type="number" name="stake" id="inputStake">
+        <input class="sbc-bttn" type="button" value="Stake">
+    </div>
+    <div class="sbc-input-sectional">
+        <input class="sbc-input" type="number" name="unstake" id="inputUnstake">
+        <input class="sbc-bttn" type="button" value="Unstake">
+    </div>
+</div>
 
 <div class="sbc-stat-sectional" >
-    <span>Staked FRZ: 0</span>
     <span>Lifetime frETH Earnings: 0</span>
     <span>Lifetime WETH Earnings: 0</span>
-    
+    <span>Claimed frETH: 0</span>
+    <span>Claimed WETH: 0</span>
+    <span>BURNT FRZ: 0</span>
 </div>
 
 
