--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
                 }
             }
 
-            setInterval(autoScroll, 6000); // Scroll every 10 seconds
+            setInterval(autoScroll, 6000);
         });
     </script>
     <script src="/script.js"></script>
