--- a/views/pages/wrapUnwrapETH.ejs
+++ b/views/pages/wrapUnwrapETH.ejs
@@ -1,1 +1,39 @@
-<h1>Wrap and Unwrap your Ethereum</h1>
+
+<div class="pageTitle">
+    <h2>
+        <div class="dropdown">
+            <svg width="25" height="25" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <polygon points="50,90 10,10 90,10" style="fill:#1963a81e;stroke:rgb(255, 255, 255);stroke-width:2" />
+              </svg>
+        <span style="font-weight: 300; cursor: pointer;" id="actionSpanWRAP">
+                  
+                WRAP</span>    
+            <div class="dropdown-content" id="dropdownMenuWRAP">
+                <a href="#" onclick="selectActionWrap('WRAP')">
+                    <div style="display: flex; align-content: center;">
+                        WRAP
+                    </div>
+</a>
+                <a href="#" onclick="selectActionWrap('UNWRAP')">
+                    UNWRAP</a>
+            </div>
+        </div>
+    </h2>
+    <h3 class="yr">YOUR</h3>
+    <h2>ETH</h2>
+
+</div>
+
+<div> 
+
+    <div id="wrapSection" class="section" style="display: block;">
+        <img src="/images/ethicon.svg" alt="">
+
+    </div>
+
+    <div id="unwrapSection" class="section" style="display: none;">  
+        <img src="/images/wethIcon.svg" alt="">
+        
+    </div>
+
+</div>
