--- a/public/styles.css
+++ b/public/styles.css
@@ -405,18 +405,42 @@ body {
       transform: rotate(0deg) scale(1);
     }
     50% {
-      transform: rotate(180deg) scale(1.2);
+      transform: rotate(180deg) scale(1);
     }
     100% {
-      transform: rotate(360deg) scale(1);
+      transform: rotate(360deg) scale(1.5);
     }
   }
   
-  /* .spinningCircle {
+  .spinningCircle:hover{
     transform-origin: center;
-    animation: spinAndResize 8s linear infinite;
-    animation-delay: 0.5ms;
-  } */
+    animation: spinAndResize 8s alternate infinite;
+    animation-delay: 1s;
+    transform: translateY(-150);
+  }
+
+.wrapper-balance-box {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+
+}
+
+.wrapper-balance-label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+}
+
+.wrapper-balance-divider {
+    padding: 60px;
+}
+
+.wrapper-balance-num {
+    padding: 20px;
+}
 
   .wrapper-icons {
     scale: 5;
@@ -424,16 +448,23 @@ body {
   }
 
   .wrapper-sectional-ETH {
-    margin-top: 160px;
+    margin-top: 120px;
   }
 
   .wrapper-sectional-WETH {
-    margin-top: 150px;
+    margin-top: 120px;
   }
 
   .wrapper-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 10%;
+    margin-top: 15%;
+  }
+
+
+  .WETHicon {
+    margin-left: 39px;
+    transform: translateY(-0.76px);
+
   }
