--- a/views/pages/burnfrETH.ejs
+++ b/views/pages/burnfrETH.ejs
@@ -31,13 +31,7 @@ Burn
 </div>
 
 
-<div class="sbc-stat-sectional" >
-    <span>Lifetime frETH Earnings: 0</span>
-    <span>Lifetime WETH Earnings: 0</span>
-    <span>Claimed frETH: 0</span>
-    <span>Claimed WETH: 0</span>
-    <span>BURNT FRZ: 0</span>
-</div>
+<%- include('../partials/sbcStats') %>
     
 
 
