--- a/views/pages/burnfrETH.ejs
+++ b/views/pages/burnfrETH.ejs
@@ -25,9 +25,26 @@
 </div>
 
 <div>
-Burn
+<div class="balance-icon-wrapper-burn">
+    <img class="frETHicon stake-icons spinningCircle" src="/images/frethicon.svg" alt="">
+    <div class="balance-wrapper">
+        <h2 class="wrapper-balance-label">
+            frETH Wallet Balance: 
+            <span class="wrapper-balance-num" id="frETHbalanceBurned-Wallet">0</span>
+        </h2>
+        <h2 class="wrapper-balance-label">
+            Total frETH Burned: 
+            <span class="wrapper-balance-num" id="frETHbalanceBurned">0</span>
+        </h2>
+    </div>
+    <div class="stake-unstake-wrapper">
+        <div class="burn-input-sectional burn-input-sectional">
+            <input class="sbc-input" type="number" name="burn" id="inputBurn">
+            <input class="sbc-bttn" type="button" value="Burn">
+        </div>
+    </div>
+</div>
 
-    <button> Submit</button>
 </div>
 
 
