--- a/views/partials/sbcStats.ejs
+++ b/views/partials/sbcStats.ejs
@@ -3,5 +3,6 @@
     <span>Lifetime WETH Earnings: <span id="stat-lifetimeWETH">0</span> </span>
     <span>Claimed frETH: <span id="stat-claimedfrETH">0</span> </span>
     <span>Claimed WETH: <span id="stat-claimedWETH">0</span> </span>
-    <span>Burnt FRZ: <span id="stat-burntFRZ">0</span> </span>
+    <span>Burnt frETH: <span id="stat-burntfrETH">0</span> </span>
+    <span>Total FRZ Staked: <span id="stat-totalFRZ">0</span> </span>
 </div>
