--- a/views/pages/documentation.ejs
+++ b/views/pages/documentation.ejs
@@ -1,3 +1,15 @@
-<a id="doclink" href="https://deepfreezellc.gitbook.io/true-freeze" target="_blank" rel="noopener noreferrer"> <h1>Complete Documentation</h1></a>
 
-<img  src="/images/frETH_ETH_tokenomics.png" alt="">
+<div class="pageTitle">
+    <h2>
+        <span style="font-weight: 300;">VIEW</span>
+    </h2>
+    <h3 class="yr">THE</h3>
+    <h2 id="freezer-title-label">DOCUMENTATION</h2>
+</div>
+
+<div class="doc-image-container">
+    <a id="doclink" href="https://deepfreezellc.gitbook.io/true-freeze" target="_blank" rel="noopener noreferrer">
+      <img style="width: 100%;" src="/images/frETH_ETH_tokenomics.png" alt="">
+    </a>
+  </div>
+  
