--- a/views/pages/lockFreezer.ejs
+++ b/views/pages/lockFreezer.ejs
@@ -1,5 +1,11 @@
-<div class="mc-box">
-<h2>Lock Freezer</h2>
+
+  <div class="pageTitle">
+    <h2>
+        <span style="font-weight: 300;">LOCK</span>
+    </h2>
+    <h3 class="yr">YOUR</h3>
+    <h2 id="freezer-title-label">FREEZER</h2>
+</div>
 <p>This is the Lock Freezer page content.</p>
 <svg width="200" height="400" viewBox="0 0 200 400" xmlns="http://www.w3.org/2000/svg">
     <!-- Fridge body -->
@@ -11,4 +17,4 @@
     <!-- Square -->
     <rect id="square" x="10" y="200" width="40" height="40" fill="#1963a866"/>
   </svg>
-</div>
+
