--- a/views/pages/stakeFRZ.ejs
+++ b/views/pages/stakeFRZ.ejs
@@ -1,6 +1,6 @@
 <div class="pageTitle">
     <h2>
-        <div class="dropdown breathing-text">
+        <div class="dropdown">
             <svg width="25" height="25" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                 <polygon points="50,90 10,10 90,10" style="fill:#1963a81e;stroke:rgb(255, 255, 255);stroke-width:2" />
               </svg>
