Created seperate svgs for the header into subfolder in images. Added a modal pop up to view individual freezers

--- a/views/pages/viewFreezers.ejs
+++ b/views/pages/viewFreezers.ejs
@@ -20,3 +20,12 @@
     </div>
   <% }); %>
 </div>
+<div id="freezerModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div id="modalFreezerBadge" class="large-badge">
+        <!-- Content will be dynamically populated -->
+      </div>
+    </div>
+  </div>
+  
