--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,37 +5,37 @@
             <li id="nav-lockFreezer">
             <div class="navbttnwrapper">
                 Lock Freezer  
-                <img id="lockIcon" class="navbttnicon" src="/images/lockicon.svg" alt=""> </li>
+                <img id="lockIcon" class="navbttnicon" src="/images/headerIcons/lockiconH.svg" alt=""> </li>
             </div>
             <li id="nav-viewFreezers">
                 <div class="navbttnwrapper">
                     View Freezers
-                    <img id="fridgeIcon" class="navbttnicon" src="/images/frETHreveallottie.svg" alt=""> </li>
+                    <img id="fridgeIcon" class="navbttnicon" src="/images/headerIcons/frETHreveallottieH.svg" alt=""> </li>
                     </div>
             </li>
             <li id="nav-stakeBurn">
                 <div class="navbttnwrapper">
                     Stake & Burn
-                    <img id="burnIcon" class="navbttnicon" src="/images/burnicon.svg" alt=""> </li>
+                    <img id="burnIcon" class="navbttnicon" src="/images/headerIcons/burniconH.svg" alt=""> </li>
                 </div>    
                 </li>
             <li id="nav-wrapUnwrapETH">
                 <div class="navbttnwrapper">
                     Wrap/Unwrap ETH
-                    <img id="wrapETHIcon" class="navbttnicon" src="/images/wethIcon.svg" alt=""> </li>
+                    <img id="wrapETHIcon" class="navbttnicon" src="/images/headerIcons/wethIconH.svg" alt=""> </li>
                 </div>
                 </li>
             <li id="nav-crvFactory">
                 <div class="navbttnwrapper">
                     frETH/WETH <br> CRV LP
-                    <img id="crvLPIcon" class="navbttnicon" src="/images/crvLP.svg" alt=""> </li>
+                    <img id="crvLPIcon" class="navbttnicon" src="/images/headerIcons/crvLPH.svg" alt=""> </li>
                 </div>
                 </li>
     
             <li id="nav-documentation">
                 <div class="navbttnwrapper">
                     Documentation
-                    <img id="docIcon" class="navbttnicon" src="/images/documentation.svg" alt=""> </li>
+                    <img id="docIcon" class="navbttnicon" src="/images/headerIcons/documentationH.svg" alt=""> </li>
                 </div>
                 </li>
         </ul>
@@ -44,7 +44,7 @@
     <div>WETH: 
     </div> 
     <div id =WETHbbBalance> 5 </div>
-    <img src="/images/ethicon.svg" alt="">
+    <img src="/images/headerIcons/ethiconH.svg" alt="">
     <br> <br>
 </div>
 <div class="balance-box">
@@ -53,7 +53,7 @@
         <span class="tooltiptext">frETH Contract Address: 0xb4bd4628e6efb0cb521d9ec35050c75840320374</span>
     </div> 
     <div id =frETHbbBalance> 0.3454</div>
-    <img src="/images/frethicon.svg" alt=""> 
+    <img src="/images/headerIcons/frethiconH.svg" alt=""> 
     <br><br>
 </div>
 <div class="balance-box">
@@ -61,7 +61,7 @@
     <span class="tooltiptext">FRZ Contract Address: 0x55b1e2D8b13E7acad03353FAD58fc3FA065C5822</span>
     </div> 
     <div id =FRZbbBalance>1304239 </div>
-    <img src="/images/frzicon.svg" alt=""> 
+    <img src="/images/headerIcons/frziconH.svg" alt=""> 
 </div>
 
 </header>
