--- a/public/styles.css
+++ b/public/styles.css
@@ -421,6 +421,97 @@ body {
     animation-delay: 2s;
   }
  
+  @keyframes modalShimmer {
+    0% {
+      background-position: -1000px 0;
+    }
+    100% {
+      background-position: 1000px 0;
+    }
+  }
+  
+  .modal-freezer-badge::after {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.1) 50%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    transform: rotate(30deg);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+  
+  .modal-freezer-badge:hover::after {
+    opacity: 1;
+    animation: modalShimmer 9s linear  infinite;
+  }
+  
+  .modal-freezer-badge {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .modal-freezer-badge::before {
+    content: none;
+  }
+  
+  .modal-freezer-badge:hover {
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    transform: none;
+    cursor: default;
+  }
+  
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+    backdrop-filter: blur(5px);
+  }
+  
+  .modal-content {
+    /* background-color: #fefefe; */
+    background-image: url(/images/gradientbgblue.png);
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 8px;
+  }
+  
+  .close {
+    color: honeydew;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin-left: 5px;
+    display: none;
+  }
+  
+  .close:hover,
+  .close:focus {
+    mix-blend-mode: color-burn;
+    text-decoration: none;
+  }
+  
 
 @keyframes breathing {
     0% {
@@ -459,13 +550,16 @@ body {
     }
   }
   
+  body {
+    overflow-y: hidden;
+}
 
   #Ellipse_1  {
     opacity: 0.5;
     border: 8px solid #1963a8;
   }
 
-  .spinningCircle{
+  .spinningCircle:hover{
     transform-origin: center;
     animation: spinAndResize 8s alternate infinite;
     animation-delay: 1s;
