--- a/views/pages/crvFactory.ejs
+++ b/views/pages/crvFactory.ejs
@@ -1,3 +1,10 @@
+<div class="pageTitle">
+    <h2>
+        <span style="font-weight: 300;">STAKE</span>
+    </h2>
+    <h3 class="yr">YOUR</h3>
+    <h2 id="freezer-title-label">CRV LP</h2>
+</div>
 <div id="iframe-container">
     <iframe id="lazy-iframe" data-src="<%= iframeSrc %>" width="100%" height="800px" frameborder="0"></iframe>
 </div>
